fix navbar overflow

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,11 +1,12 @@
 .navbar {
   position: fixed;
   background-color: transparent;
+  box-sizing: border-box;
   display: flex;
   align-content: center;
   justify-content: space-between;
   padding: 0 10%;
-  /* width: 100%; */
+  width: 100%;
   height: 75px;
   z-index: 1;
   transition: background-color 0.5s ease;
@@ -158,11 +159,7 @@ nav .logo {
 
 @media (max-width: 768px) {
   .box-brand h4 {
-    display: none;
-  }
-
-  .box-brand img {
-    height: 50px;
+    font-size: 20px;
   }
 
   .list-navbar {
@@ -170,7 +167,7 @@ nav .logo {
     flex-direction: column;
     right: 0;
     top: 0;
-    width: 50vw;
+    width: 80vw;
     height: 100vh;
     background-color: #111;
     justify-content: start;
@@ -179,13 +176,28 @@ nav .logo {
     transform: translateX(100%);
     transition: all 0.8s;
     opacity: 0;
+    z-index: -1;
   }
 
   .list-navbar li {
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     height: max-content;
     width: 100%;
+    border-bottom: 1px #fff solid;
+    align-items: center;
+    /* background-color: antiquewhite */
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .list-navbar li a {
     padding: 10px;
+    margin-left: 0;
+    padding-left: 20px;
+    margin-top: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: aqua; */
   }
 
   .list-navbar li:nth-child(1) {
@@ -193,7 +205,7 @@ nav .logo {
   }
 
   .list-navbar li a::before {
-    top: 60%;
+    content: none;
   }
 
   .menu-toggle {
@@ -209,9 +221,5 @@ nav .logo {
 @media (max-width: 576) {
   .box-brand h4 {
     display: none;
-  }
-
-  .box-brand img {
-    height: 50px;
   }
 }
